// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notifications render empty 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Notifications
    hideNotification={[Function]}
    notifications={Array []}
>
    children
</Notifications>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        "children",
        <Unknown>
          
</Unknown>,
      ],
    },
    "ref": null,
    "rendered": Array [
      "children",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [],
        },
        "ref": null,
        "rendered": Array [],
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "sc-eHgmQL",
            "isStatic": false,
            "rules": Array [
              "
  width: 300px;
  height: 0;
  position: fixed;
  right: ",
              [Function],
              ";
  top: ",
              [Function],
              ";
  z-index: ",
              [Function],
              ";
  padding: 0;
  margin: 0;
",
            ],
          },
          "displayName": "styled.ul",
          "render": [Function],
          "styledComponentId": "sc-eHgmQL",
          "target": "ul",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          "children",
          <Unknown>
            
</Unknown>,
        ],
      },
      "ref": null,
      "rendered": Array [
        "children",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [],
          },
          "ref": null,
          "rendered": Array [],
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": undefined,
            "componentStyle": ComponentStyle {
              "componentId": "sc-eHgmQL",
              "isStatic": false,
              "rules": Array [
                "
  width: 300px;
  height: 0;
  position: fixed;
  right: ",
                [Function],
                ";
  top: ",
                [Function],
                ";
  z-index: ",
                [Function],
                ";
  padding: 0;
  margin: 0;
",
              ],
            },
            "displayName": "styled.ul",
            "render": [Function],
            "styledComponentId": "sc-eHgmQL",
            "target": "ul",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Notifications render with one item 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Notifications
    hideNotification={[Function]}
    notifications={
        Array [
            Object {
              "id": "id",
              "text": "text",
              "type": "success",
            },
          ]
    }
>
    children
</Notifications>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        "children",
        <Unknown>
          <NotificationItem
                    onClick={[Function]}
                    status="entering"
                    text="text"
                    type="success"
          />
</Unknown>,
      ],
    },
    "ref": null,
    "rendered": Array [
      "children",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <NotificationItem
              onClick={[Function]}
              status="entering"
              text="text"
              type="success"
/>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "id",
            "nodeType": "function",
            "props": Object {
              "onClick": [Function],
              "status": "entering",
              "text": "text",
              "type": "success",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "sc-eHgmQL",
            "isStatic": false,
            "rules": Array [
              "
  width: 300px;
  height: 0;
  position: fixed;
  right: ",
              [Function],
              ";
  top: ",
              [Function],
              ";
  z-index: ",
              [Function],
              ";
  padding: 0;
  margin: 0;
",
            ],
          },
          "displayName": "styled.ul",
          "render": [Function],
          "styledComponentId": "sc-eHgmQL",
          "target": "ul",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          "children",
          <Unknown>
            <NotificationItem
                        onClick={[Function]}
                        status="entering"
                        text="text"
                        type="success"
            />
</Unknown>,
        ],
      },
      "ref": null,
      "rendered": Array [
        "children",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <NotificationItem
                onClick={[Function]}
                status="entering"
                text="text"
                type="success"
/>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "id",
              "nodeType": "function",
              "props": Object {
                "onClick": [Function],
                "status": "entering",
                "text": "text",
                "type": "success",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": undefined,
            "componentStyle": ComponentStyle {
              "componentId": "sc-eHgmQL",
              "isStatic": false,
              "rules": Array [
                "
  width: 300px;
  height: 0;
  position: fixed;
  right: ",
                [Function],
                ";
  top: ",
                [Function],
                ";
  z-index: ",
                [Function],
                ";
  padding: 0;
  margin: 0;
",
              ],
            },
            "displayName": "styled.ul",
            "render": [Function],
            "styledComponentId": "sc-eHgmQL",
            "target": "ul",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
